notebook to work with Flair models

--- a/codes/Flair_model.ipynb
+++ b/codes/Flair_model.ipynb
@@ -5,11 +5,11 @@
    "id": "8834f94a",
    "metadata": {},
    "source": [
-    "# BERT models\n",
+    "# Flair model\n",
     "\n",
     "A simple notebook to:\n",
-    "- Read one of the pretrained BERT models\n",
-    "- Examples on how to do the task of \"fill-mask\""
+    "- Read a pretrained Flair model\n",
+    "- Examples on how to do the task of generating text"
    ]
   },
   {
@@ -19,7 +19,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import pipeline"
+    "from flair.embeddings import FlairEmbeddings\n",
+    "from flair.data import Sentence\n",
+    "\n",
+    "import flair, torch\n",
+    "flair.device = torch.device('cpu') "
    ]
   },
   {
@@ -32,28 +36,19 @@
     "# --- INPUTS\n",
     "\n",
     "# path2model can be set to:\n",
-    "#    \"bert-base-uncased\"\n",
-    "#     or path to one of the models in histLM_dataset, e.g.\n",
-    "#         \"../histLM_dataset/bert/bert_1760_1850\"\n",
-    "#         \"../histLM_dataset/bert/bert_1850_1875\"\n",
-    "#         \"../histLM_dataset/bert/bert_1875_1890\"\n",
-    "#         \"../histLM_dataset/bert/bert_1890_1900\"\n",
-    "#         \"../histLM_dataset/bert/bert_1760_1900\"\n",
-    "path2model = \"../histLM_dataset/bert/bert_1760_1900\"\n",
-    "tokenizer = \"bert-base-uncased\""
+    "#    \"../histLM_dataset/flair/flair_1760_1900/best-lm.pt\"\n",
+    "path2model = \"../histLM_dataset/flair/flair_1760_1900/best-lm.pt\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a83dc4bb",
+   "id": "5e1166d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a pipeline, see transformers repo for details\n",
-    "model_rd = pipeline(\"fill-mask\", \n",
-    "                    model=path2model, \n",
-    "                    tokenizer=tokenizer)"
+    "# Read language model\n",
+    "language_model = FlairEmbeddings(path2model)"
    ]
   },
   {
@@ -70,29 +65,42 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0b7389e",
+   "id": "34260c16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = model_rd(mysent)\n",
-    "print(output)"
+    "flair_sentence = Sentence(mysent)\n",
+    "language_model.embed(flair_sentence)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bab6d11",
+   "id": "b472d094",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for one_output in output:\n",
-    "    print(f\"{one_output['token_str']:<20} | {one_output['sequence']}\")"
+    "# now check out the embedded tokens.\n",
+    "for token in flair_sentence:\n",
+    "    print(token)\n",
+    "    print(token.embedding)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7bdc1dc6",
+   "id": "fe911841",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(language_model.lm.generate_text(\"They were told that the engine stopped working \", \n",
+    "                                      number_of_characters=500))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4335361",
    "metadata": {},
    "outputs": [],
    "source": []
