Add outputs to notebooks

--- a/notebooks/BERT_model.ipynb
+++ b/notebooks/BERT_model.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6da5a272",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e2f92f38",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "7c3e8d97",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9a56b512",
    "metadata": {},
    "outputs": [],
@@ -69,10 +69,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "a617228f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'sequence': 'they were told that the mill stopped working.', 'score': 0.2522742748260498, 'token': 4971, 'token_str': 'mill'}, {'sequence': 'they were told that the engine stopped working.', 'score': 0.08471374213695526, 'token': 3194, 'token_str': 'engine'}, {'sequence': 'they were told that the machine stopped working.', 'score': 0.05655306577682495, 'token': 3698, 'token_str': 'machine'}, {'sequence': 'they were told that the men stopped working.', 'score': 0.04484018310904503, 'token': 2273, 'token_str': 'men'}, {'sequence': 'they were told that the miners stopped working.', 'score': 0.03542417287826538, 'token': 11257, 'token_str': 'miners'}]\n"
+     ]
+    }
+   ],
    "source": [
     "output = model_rd(mysent)\n",
     "print(output)"
@@ -80,10 +88,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0e8868b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mill                 | they were told that the mill stopped working.\n",
+      "engine               | they were told that the engine stopped working.\n",
+      "machine              | they were told that the machine stopped working.\n",
+      "men                  | they were told that the men stopped working.\n",
+      "miners               | they were told that the miners stopped working.\n"
+     ]
+    }
+   ],
    "source": [
     "for one_output in output:\n",
     "    print(f\"{one_output['token_str']:<20} | {one_output['sequence']}\")"
