--- a/notebooks/Flair_model.ipynb
+++ b/notebooks/Flair_model.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c62c897d",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f599da10",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5e1166d5",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "69619537",
    "metadata": {},
    "outputs": [],
@@ -64,10 +64,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "34260c16",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[Sentence: \"They were told that the [ MASK ] stopped working .\"   [− Tokens: 11]]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "flair_sentence = Sentence(mysent)\n",
     "language_model.embed(flair_sentence)"
@@ -75,10 +86,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b472d094",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Token: 1 They\n",
+      "tensor([ 0.0051, -0.0005, -0.0168,  ...,  0.0135,  0.0080, -0.0082])\n",
+      "Token: 2 were\n",
+      "tensor([ 1.9208e-03, -8.2278e-05, -5.5975e-02,  ...,  1.7667e-02,\n",
+      "        -3.0257e-03, -5.0397e-04])\n",
+      "Token: 3 told\n",
+      "tensor([-4.2937e-02, -9.1127e-05, -4.2566e-02,  ..., -3.7135e-02,\n",
+      "         6.9754e-04, -2.6254e-03])\n",
+      "Token: 4 that\n",
+      "tensor([-6.7677e-02, -4.9359e-05, -1.6307e-03,  ..., -2.8282e-02,\n",
+      "         5.6025e-02,  1.3636e-04])\n",
+      "Token: 5 the\n",
+      "tensor([ 0.0031, -0.0019, -0.0213,  ..., -0.0202,  0.0213, -0.0004])\n",
+      "Token: 6 [\n",
+      "tensor([-0.0279, -0.0016, -0.0147,  ..., -0.0897, -0.0656,  0.0002])\n",
+      "Token: 7 MASK\n",
+      "tensor([-9.3989e-03, -3.7500e-05,  1.0471e-02,  ..., -3.1248e-02,\n",
+      "        -5.5736e-02,  5.0478e-04])\n",
+      "Token: 8 ]\n",
+      "tensor([ 7.2111e-03, -3.3496e-04, -9.4604e-03,  ..., -9.4257e-03,\n",
+      "        -6.6297e-02,  4.5420e-05])\n",
+      "Token: 9 stopped\n",
+      "tensor([-0.0025, -0.0114,  0.0026,  ...,  0.0273, -0.0259, -0.0019])\n",
+      "Token: 10 working\n",
+      "tensor([-0.0033,  0.0003, -0.0203,  ...,  0.0213,  0.1101,  0.0003])\n",
+      "Token: 11 .\n",
+      "tensor([ 4.7313e-03, -8.0535e-05,  7.2273e-04,  ...,  4.0372e-03,\n",
+      "        -1.0141e-02, -5.8394e-07])\n"
+     ]
+    }
+   ],
    "source": [
     "# now check out the embedded tokens.\n",
     "for token in flair_sentence:\n",
@@ -88,10 +134,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fe911841",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('They were told that the engine stopped working at a few hours but in striking accounts for having repaired to them the commander might send him to the capital .\\nThe edge of the ravine a beautiful elevain obliterating known as mine Hist .\\nHis eye-glass most inhabitants who frequent the shore of the Neva in the sea coast in the valleys which form the streams of Lucys hut are brooding as if they were gradually up birth .\\nBefore me I have witnessed such a sudden flash of lightning and such a light on the star tower that it may not have long sinc', 18.13060546875)\n"
+     ]
+    }
+   ],
    "source": [
     "print(language_model.lm.generate_text(\"They were told that the engine stopped working \", \n",
     "                                      number_of_characters=500))"
