--- a/notebooks/fastText_model.ipynb
+++ b/notebooks/fastText_model.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c62c897d",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f599da10",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5e1166d5",
    "metadata": {},
    "outputs": [],
@@ -50,10 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "487ea00e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('machiner', 0.9164908528327942), ('machineiy', 0.9114788174629211), ('machined', 0.9072287082672119), ('machinery7', 0.8947433829307556), ('machines', 0.8870446681976318), ('machinerv', 0.8809642791748047), ('machinery', 0.8802279233932495), ('machinery-', 0.8793637752532959), ('machinerys', 0.8775567412376404), ('machiners', 0.8639712333679199)]\n"
+     ]
+    }
+   ],
    "source": [
     "sims = model.wv.most_similar('machine', topn=10)\n",
     "print(sims)"
@@ -61,14 +69,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d5dabe93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "machiner             -- 0.916\n",
+      "machineiy            -- 0.911\n",
+      "machined             -- 0.907\n",
+      "machinery7           -- 0.895\n",
+      "machines             -- 0.887\n",
+      "machinerv            -- 0.881\n",
+      "machinery            -- 0.880\n",
+      "machinery-           -- 0.879\n",
+      "machinerys           -- 0.878\n",
+      "machiners            -- 0.864\n"
+     ]
+    }
+   ],
    "source": [
     "for one_word in sims:\n",
     "    print(f\"{one_word[0]:<20} -- {one_word[1]:.3f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "482a5fc6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
