--- a/notebooks/word2vec_model.ipynb
+++ b/notebooks/word2vec_model.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c62c897d",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f599da10",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5e1166d5",
    "metadata": {},
    "outputs": [],
@@ -50,10 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "487ea00e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('machines', 0.7792686820030212), ('machinery', 0.7629484534263611), ('engine', 0.727625846862793), ('steam-engine', 0.7088614702224731), ('engines', 0.6519815921783447), ('water-pressure', 0.6468381285667419), ('threshing-machine', 0.644723117351532), ('block-making', 0.6427738666534424), ('apparatus', 0.6412078142166138), ('machineiy', 0.6396113634109497)]\n"
+     ]
+    }
+   ],
    "source": [
     "sims = model.wv.most_similar('machine', topn=10)\n",
     "print(sims)"
@@ -61,14 +69,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d5dabe93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "machines             -- 0.779\n",
+      "machinery            -- 0.763\n",
+      "engine               -- 0.728\n",
+      "steam-engine         -- 0.709\n",
+      "engines              -- 0.652\n",
+      "water-pressure       -- 0.647\n",
+      "threshing-machine    -- 0.645\n",
+      "block-making         -- 0.643\n",
+      "apparatus            -- 0.641\n",
+      "machineiy            -- 0.640\n"
+     ]
+    }
+   ],
    "source": [
     "for one_word in sims:\n",
     "    print(f\"{one_word[0]:<20} -- {one_word[1]:.3f}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a9fd52f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
