use os to define paths

--- a/notebooks/BERT_model.ipynb
+++ b/notebooks/BERT_model.ipynb
@@ -19,6 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from transformers import pipeline"
    ]
   },
@@ -34,12 +35,12 @@
     "# path2model can be set to:\n",
     "#    \"bert-base-uncased\"\n",
     "#     or path to one of the models in histLM_dataset, e.g.\n",
-    "#         \"../histLM_dataset/bert/bert_1760_1850\"\n",
-    "#         \"../histLM_dataset/bert/bert_1850_1875\"\n",
-    "#         \"../histLM_dataset/bert/bert_1875_1890\"\n",
-    "#         \"../histLM_dataset/bert/bert_1890_1900\"\n",
-    "#         \"../histLM_dataset/bert/bert_1760_1900\"\n",
-    "path2model = \"../histLM_dataset/bert/bert_1760_1900\"\n",
+    "#         os.path.join(os.pardir, \"histLM_dataset\", \"bert\", \"bert_1760_1850\")\n",
+    "#         os.path.join(os.pardir, \"histLM_dataset\", \"bert\", \"bert_1850_1875\")\n",
+    "#         os.path.join(os.pardir, \"histLM_dataset\", \"bert\", \"bert_1875_1890\")\n",
+    "#         os.path.join(os.pardir, \"histLM_dataset\", \"bert\", \"bert_1890_1900\")\n",
+    "#         os.path.join(os.pardir, \"histLM_dataset\", \"bert\", \"bert_1760_1900\")\n",
+    "path2model = os.path.join(os.pardir, \"histLM_dataset\", \"bert\", \"bert_1760_1900\")\n",
     "tokenizer = \"bert-base-uncased\""
    ]
   },
@@ -112,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cfe72f7b",
+   "id": "5eb1a5b3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -134,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
