use os to define paths

--- a/notebooks/Flair_model.ipynb
+++ b/notebooks/Flair_model.ipynb
@@ -19,6 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from flair.embeddings import FlairEmbeddings\n",
     "from flair.data import Sentence\n",
     "\n",
@@ -36,8 +37,8 @@
     "# --- INPUTS\n",
     "\n",
     "# path2model can be set to:\n",
-    "#    \"../histLM_dataset/flair/flair_1760_1900/best-lm.pt\"\n",
-    "path2model = \"../histLM_dataset/flair/flair_1760_1900/best-lm.pt\""
+    "#    os.path.join(os.pardir, \"histLM_dataset\", \"flair\", \"flair_1760_1900\", \"best-lm.pt\")\n",
+    "path2model = os.path.join(os.pardir, \"histLM_dataset\", \"flair\", \"flair_1760_1900\", \"best-lm.pt\")"
    ]
   },
   {
@@ -142,19 +143,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('They were told that the engine stopped working at a few hours but in striking accounts for having repaired to them the commander might send him to the capital .\\nThe edge of the ravine a beautiful elevain obliterating known as mine Hist .\\nHis eye-glass most inhabitants who frequent the shore of the Neva in the sea coast in the valleys which form the streams of Lucys hut are brooding as if they were gradually up birth .\\nBefore me I have witnessed such a sudden flash of lightning and such a light on the star tower that it may not have long sinc', 18.13060546875)\n"
+      "('They were told that the engine stopped working in the eastern surface and give up the credulity o', 17.85160888671875)\n"
      ]
     }
    ],
    "source": [
     "print(language_model.lm.generate_text(\"They were told that the engine stopped working \", \n",
-    "                                      number_of_characters=500))"
+    "                                      number_of_characters=50))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4335361",
+   "id": "301f071d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -176,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
