use os to define paths

--- a/notebooks/word2vec_model.ipynb
+++ b/notebooks/word2vec_model.ipynb
@@ -19,6 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "from gensim.models import Word2Vec"
    ]
   },
@@ -32,9 +33,9 @@
     "# --- INPUTS\n",
     "\n",
     "# path2model can be set to:\n",
-    "#    \"../histLM_dataset/word2vec/w2v_1760_1850/w2v_words.model\"\n",
-    "#    \"../histLM_dataset/word2vec/w2v_1760_1900/w2v_words.model\"\n",
-    "path2model = \"../histLM_dataset/word2vec/w2v_1760_1900/w2v_words.model\""
+    "#    os.path.join(os.pardir, \"histLM_dataset\", \"word2vec\", \"w2v_1760_1850\", \"w2v_words.model\")\n",
+    "#    os.path.join(os.pardir, \"histLM_dataset\", \"word2vec\", \"w2v_1760_1900\", \"w2v_words.model\")\n",
+    "path2model = os.path.join(os.pardir, \"histLM_dataset\", \"word2vec\", \"w2v_1760_1900\", \"w2v_words.model\")"
    ]
   },
   {
@@ -98,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a9fd52f",
+   "id": "0c708ff3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -120,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.11"
   }
  },
  "nbformat": 4,
